<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">4InaRowPower</string>
    <string name="msg_youwin">Well done, you win !</string>
    <string name="msg_p1win">Player 1 has won !</string>
    <string name="msg_p2win">Player 2 has won !</string>
    <string name="msg_youlose">Sorry, you have lost !</string>
    <string name="msg_draw">Uh oh, it\'s a draw!</string>
    <string name="msg_players">Choose your game</string>
    <string name="msg_diff">Choose your options</string>
    <string name="msg_sound">Settings</string>
    <string name="msg_help">Help</string>
    <string name="sureleave">Are you sure you want to quit this game?</string>
    <string name="surerestart">Are you sure you want to restart the game?</string>
    <string name="all_help">Take it in turns to drop pieces into a column of your choice. The winner is the player who makes a line of four
    continuous pieces.\n\nLines can be horizontal, vertical or diagonal. The yellow powerball will appear at random and can be used by either side.
    \n\nEmail bugs/suggestions to:\n ihassantariq@hotmail.com</string>
    <string name="game_title">Connect Four Power</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick Match</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
   
    
</resources>
