<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:src="@drawable/wood"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:id="@+id/background_image"
        />
    <com.convension.connectfour.views.DecorView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

    <View
        android:background="@drawable/dark_rectangle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            style="@style/SignInButton"
            />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout
      android:id="@+id/screen_main"
      style="@style/LLScreen">
        <Button android:id="@+id/button_quick_game"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/greenbutton"
                style="@style/MyButton"
                android:maxWidth="400dp"
                android:minWidth="200dp"
            android:text="@string/quick_game" />
        <Button android:id="@+id/button_invite_players"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/greenbutton"
                style="@style/MyButton"
                android:maxWidth="400dp"
                android:minWidth="200dp"
            android:text="@string/invite_players" />
        <Button android:id="@+id/button_see_invitations"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/greenbutton"
                style="@style/MyButton"
                android:maxWidth="400dp"
                android:minWidth="200dp"
            android:text="@string/see_invitations" />
        <!--<TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation" />-->
        <Button android:id="@+id/button_sign_out"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/greenbutton"
                style="@style/MyButton"
                android:maxWidth="400dp"
                android:minWidth="200dp"
            android:text="@string/sign_out" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

       <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">
    <!--    <TextView android:id="@+id/instructions"
            style="@style/Instructions" android:text="@string/instructions" android:visibility="gone" />
        <TextView android:id="@+id/my_score" style="@style/ScoreDisplay" android:visibility="gone" />
        <Button android:id="@+id/button_click_me"
                style="@style/GameButton"
                android:text="@string/click_me"
                android:layout_marginBottom="20dp" android:visibility="gone" />
        <TextView android:id="@+id/countdown" style="@style/FigureLabel" android:visibility="gone" />

        <LinearLayout style="@style/ScoresBox" android:visibility="gone">
            <TextView android:id="@+id/score0" style="@style/ScoreText" />
            <TextView android:id="@+id/score1" style="@style/ScoreText" />
            <TextView android:id="@+id/score2" style="@style/ScoreText" />
            <TextView android:id="@+id/score3" style="@style/ScoreText" />
        </LinearLayout>-->
    </LinearLayout>-->
        </FrameLayout>
</FrameLayout>